--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,35 @@
-theme: phantom
+### Hi there 👋
+
+My name is **Luca David** and I am a graduate student 👨🏼‍🎓 in Economics and Finance at the University of Tübingen 🇩🇪 and the Università degli studi di Pavia 🇮🇹.
+
+Short bio:
+
+💯 &emsp;  2017-2021: &emsp;  Mathematics and Management (B.Sc.), Ulm University                       🇩🇪 <br />
+🧠 &emsp;  2017-2022: &emsp;  Psychology (B.Sc.), Ulm University                                       🇩🇪 <br />
+↗️ &emsp;  2021-2023: &emsp;  Economics (M.Sc.), Eberhard Karls University of Tübingen                 🇩🇪 <br />
+🏦 &emsp;  2022-2023: &emsp;  Economics and Finance (dott. mag.), Università degli studi di Pavia      🇮🇹 <br />
+
+<!---
+since 2023: Ph.D. Student in Applied Microeconomics, Ulm University
+-->
+
+Research Interests:
+
+* Experimental and Behavioral Economics   <br />
+* Microeconometrics                       <br />
+* Sport Economics                         <br />
+
+<!---
+Sprechstunde: nach Vereinbarung 
+-->
+
+Here are some ideas to get you started:
+
+- 🔭 I’m currently working on ...
+- 🌱 I’m currently learning ...
+- 👯 I’m looking to collaborate on ...
+- 🤔 I’m looking for help with ...
+- 💬 Ask me about ...
+- 📫 How to reach me: ...
+- 😄 Pronouns: ...
+- ⚡ Fun fact: ...
